@@ -370,6 +370,7 @@
   - doc:     linux.html: Introduction (Peter S.)
   - feature: contrib/82_M232Voltage.pm (by Boris, 24.12)
   - feature: delattr renamed to deleteattr (Rudi, 29.12)
+  - feature: defattr renamed to setdefaultattr (Rudi, 29.12)
   - feature: device spec (list/range/regexp) for most commands implemented
   - feature: %NAME, %EVENT, %TYPE parameters in notify definition
 
